--- a/index.html
+++ b/index.html
@@ -238,6 +238,68 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people genuinely happy
+          </h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">
+                Mary Airy
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+                voluptatibus eveniet eius in assumenda corrupti ea aliquid
+                accusantium minima placeat modi, voluptate molestias itaque
+                sapiente dolor aut impedit eum quia. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Amet ullam ipsum ipsa similique!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">
+                Jack Recher
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow! My life is completely different now.
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure
+                voluptatibus eveniet eius in assumenda corrupti ea aliquid
+                accusantium minima placeat modi, voluptate molestias itaque
+                sapiente dolor aut impedit eum quia. Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Amet ullam ipsum ipsa similique!
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn btn-text">Read all stories &rarr;</a>
+        </div>
+      </section>
     </main>
     <!--
     <section class="grid-test">
