--- a/index.html
+++ b/index.html
@@ -372,6 +372,39 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <div class="footer__logo-box">
+        <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
+      </div>
+      <div class="row">
+        <div class="col-1-of-2">
+          <div class="footer__navigation">
+            <ul class="footer__list">
+              <li class="footer__item">
+                <a href="#" class="footer__link">Company</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Contact us</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Careers</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Privacy</a>
+              </li>
+              <li class="footer__item">
+                <a href="#" class="footer__link">Terms</a>
+              </li>
+            </ul>
+          </div>
+        </div class="col-1-of-2">
+        <div class="col-1-of-2">
+          <p class="footer__copyright">
+            Build by <a href="#" class="footer__link">Svetlana Shinkar</a>as a part of workshop <a href="Advanced CSS and SASS" class="footer__link"></a>. Copyright &copy; by Jonas Schmedtmann.
+          </p>
+        </div class="col-1-of-2">
+      </div>
+    </footer>
     <!--
     <section class="grid-test">
       <div class="row">
