--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Your benefits</a></li>
           <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
           <li class="navigation__item"><a href="#" class="navigation__link"><span>04<span>Stories</a></li>
-          <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+          <li class="navigation__item"><a href="#popup" class="navigation__link"><span>05</span>Book now</a></li>
         </ul>
       </nav>
     </div>
@@ -41,9 +41,9 @@
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
         <a
-          href="file:///Users/svetlanashin/Desktop/TravelWithMe/index.html"
+          href="#section-tours"
           class="btn btn--white btn--animated"
-          >Discover our tools</a
+          >Discover our tours</a
         >
       </div>
     </header>
@@ -147,7 +147,7 @@
           </div>
         </div>
       </section>
-      <section class="section-tours">
+      <section class="section-tours" id="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Most popular tours
@@ -181,7 +181,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$299</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now</a>
+                  <a href="#popup" class="btn btn--white">Book now</a>
                 </div>
               </div>
             </div>
@@ -213,7 +213,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$499</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now</a>
+                  <a href="#popup" class="btn btn--white">Book now</a>
                 </div>
               </div>
             </div>
@@ -245,7 +245,7 @@
                     <p class="card__price-only">Only</p>
                     <p class="card__price-value">$599</p>
                   </div>
-                  <a href="#" class="btn btn--white">Book now</a>
+                  <a href="#popup" class="btn btn--white">Book now</a>
                 </div>
               </div>
             </div>
@@ -423,19 +423,20 @@
       </div>
     </footer>
 
-    <div class="popup">
+    <div class="popup" id="popup">
       <div class="popup__content">
       <div class="popup__left">
         <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
         <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
       </div>
       <div class="popup__right">
+        <a href="#section-tours" class="popup__close">&times;</a>
        <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
        <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
        <p class="popup__text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Convallis tellus id interdum velit laoreet id. Platea dictumst quisque sagittis purus sit amet volutpat consequat mauris. Viverra aliquet eget sit amet tellus. Eu feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Odio ut enim blandit volutpat maecenas volutpat. Laoreet suspendisse interdum consectetur libero id. Egestas quis ipsum suspendisse ultrices. Tortor at risus viverra adipiscing at in. Sed velit dignissim sodales ut eu sem integer. Aliquam ultrices sagittis orci a scelerisque purus semper. Aliquam ut porttitor leo a diam. Mollis aliquam ut porttitor leo a diam sollicitudin tempor id. Nullam vehicula ipsum a arcu cursus vitae. Risus feugiat in ante metus dictum.
        </p>
-       <a href="#" class="btn btn--green">Book now</a>
+       <a href="#popup" class="btn btn--green">Book now</a>
       </div>
       </div>
     </div>
